2003-10-31  Wakaba  <wakaba@suika.fam.cx>

	* XML.pm (get_attribute_value): New.
	(_get_ns_decls_node): 'default': New option.

2003-09-30  Wakaba  <wakaba@suika.fam.cx>

	* XML.pm: Use Message::Markup::XML::QName.

2003-09-07  Wakaba  <wakaba@suika.fam.cx>

	* XML.pm: Change SuikaWiki:: -> Message::.

2003-08-19  Wakaba  <wakaba@suika.fam.cx>

	* XML.pm (expanded_name): New method.

2003-08-07  Wakaba  <wakaba@suika.fam.cx>

	* SuikaWikiConfig20.pm: New module.

2003-07-12  Wakaba  <w@suika.fam.cx>

	* XML.pm (target_name): Removed.
	(inner_xml): Reimplement ENTITY declaration outputing.

2003-06-29  Wakaba  <w@suika.fam.cx>

	* XML.pm: INCLUDE/IGNORE marked section is supported.

2003-06-27  Wakaba  <w@suika.fam.cx>

	* XML.pm (remove_references): Remove 'smxp__defined_with_param_ref' flag
	to remove parameter references in the ENTITY declaration.

2003-06-26  Wakaba  <w@suika.fam.cx>

	* XML.pm (_resolve_relative_uri_by_parent): New functions.

2003-06-23  Wakaba  <w@suika.fam.cx>

	* XML.pm (base_uri, resolve_relative_uri): New functions.

2003-06-16  Wakaba  <w@suika.fam.cx>

	* XML.pm: Some bug fixes and addition of features to support
	SuikaWiki::Markup::XML::Parser.

2003-05-25  Wakaba  <w@offweb.ddo.jp>

	* XML.pm (new): Support new arguments, 'qname' and 'namespace_prefix'.
	(_ns_parse_qname): New.
	(namespace_prefix): New.

2003-05-24  Wakaba  <w@offweb.ddo.jp>

	* XML/: New directory.
	* XML.pm: Update to support XML/Parser.pm.
	* TODO: New.

2003-05-11  Wakaba  <w@offweb.ddo.jp>

	* XML.pm (attribute_value): Output #reference as is.

2003-04-29  Wakaba  <w@offweb.ddo.jp>

	* XML.pm: Bug fixes.
	(content_spec): New function.
	(inner_xml#pi): If pi's content has '?>', replace to '? >'. (same behavior
	as XSLT's.) (Was replaced to '?&gt;'.)
	(#reference, #section): New support.
	(#declaration): All XML's declarations are supported.
	(inner_text%output_ref_as_is): New option.
	(_check_name): New.
	(flag): New.
	(POD:NODE TYPES): New documentation.
