@@ -1,3 +1,7 @@
+2003-11-01  Wakaba  <wakaba@suika.fam.cx>
+
+	* XML.pm (inner_xml): s/-$/&#45;/ if #comment node.
+
 2003-10-31  Wakaba  <wakaba@suika.fam.cx>
 
 	* XML.pm (get_attribute_value): New.
